--- a/Notebooks/belmont_webscrape.ipynb
+++ b/Notebooks/belmont_webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5c3ae297",
+   "id": "86145a05",
    "metadata": {},
    "source": [
     "Problems running into during this scraping and how they're solved:\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75159c5b",
+   "id": "c9d2aaa7",
    "metadata": {},
    "source": [
     "main website: https://www.belmont.edu/\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27532577",
+   "id": "407d2607",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a30965c",
+   "id": "4af9c057",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a4178e24",
+   "id": "58ddb5a5",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a076e0a",
+   "id": "6b4c791b",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "caed1e33",
+   "id": "fc7f4781",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "316a538d",
+   "id": "b4fdbf01",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f016fa6c",
+   "id": "1d91b511",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8210d98e",
+   "id": "fa2280b0",
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "68206f0a",
+   "id": "7f12d66d",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "073dc09b",
+   "id": "af6491da",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a1fe29ea",
+   "id": "fd510249",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "70b31100",
+   "id": "5be6f006",
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f86f817b",
+   "id": "7ab960ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3068,7 +3068,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3082,7 +3082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
