--- a/Notebooks/lipscomb_webscrape.ipynb
+++ b/Notebooks/lipscomb_webscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "484c5ca6",
+   "id": "50f3dd45",
    "metadata": {},
    "source": [
     "Problems running into during this scraping and how they're solved:\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8313d315",
+   "id": "3b9dc9f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc805cf2",
+   "id": "fc3fa35d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5693f9c",
+   "id": "39cff156",
    "metadata": {},
    "source": [
     "main website: https://www.lipscomb.edu/\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e07c044",
+   "id": "d11b6ebe",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f953ddb6",
+   "id": "c6c1ed6d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61703596",
+   "id": "287f34b9",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de37300f",
+   "id": "306fae30",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "df06b13e",
+   "id": "7d837798",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "900b19dd",
+   "id": "d881c437",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "21732c4c",
+   "id": "93ee06e1",
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "643b7d7a",
+   "id": "17883c4f",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "171af676",
+   "id": "c8fdfdc5",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "49b09d13",
+   "id": "b9d3db35",
    "metadata": {},
    "outputs": [
     {
@@ -3538,7 +3538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3da05d0",
+   "id": "ee13bf02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3546,7 +3546,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9cfdad0",
+   "id": "79356ceb",
    "metadata": {},
    "outputs": [
     {
@@ -3577,7 +3577,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "369193e5",
+   "id": "8073d7e5",
    "metadata": {},
    "outputs": [
     {
@@ -3606,7 +3606,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ea4bb993",
+   "id": "6e3bc81d",
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3625,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "356ce7da",
+   "id": "7afe1299",
    "metadata": {},
    "outputs": [
     {
@@ -5037,7 +5037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70fb96ea",
+   "id": "6a25896b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5045,7 +5045,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5059,7 +5059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
