--- a/Notebooks/vanderbilt_webscrape.ipynb
+++ b/Notebooks/vanderbilt_webscrape.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c8164f12",
+   "id": "131c540c",
    "metadata": {},
    "source": [
     "Problems running into during this scraping and how they're solved:\n",
     "\n",
-    "    1) course descriptions are in a PDF. looks like I'll need to learn a PDF scraper, maybe PyPDF2 import PdfFileReader?"
+    "    1) course descriptions are in a PDF. looks like I'll need to learn a PDF scraper, maybe PyPDF2 import PdfFileReader?\n",
+    "    **look into ilovepdf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4882f5be",
+   "id": "3e297bed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e889fa6e",
+   "id": "ac893676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0361086",
+   "id": "e1f59a5e",
    "metadata": {},
    "source": [
     "main website: https://www.vanderbilt.edu/\n",
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e927d92",
+   "id": "62baead6",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "844f7aa8",
+   "id": "7c7a4665",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "42b9595a",
+   "id": "31eeccfc",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "df8faa10",
+   "id": "60f456c3",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7258f645",
+   "id": "d05ec083",
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f22d28",
+   "id": "8224c280",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1331,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e0019fa2",
+   "id": "34b5a06c",
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f9ddc124",
+   "id": "6585f139",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54463059",
+   "id": "e4549be8",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b3f966d1",
+   "id": "6681aeeb",
    "metadata": {},
    "outputs": [
     {
@@ -1925,14 +1926,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "babc5548",
+   "id": "7a79ebca",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c16d52c1",
+   "id": "4dd61f6a",
    "metadata": {},
    "source": [
     "FROM HERE DOWN I NEED TO LOOK INTO WEBSCRAPING A PDF!!!"
@@ -1941,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41a0a2f",
+   "id": "6f27e8bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e78c36b1",
+   "id": "b5eb845b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,7 +1965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0910217",
+   "id": "1e75e4ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1975,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b87195a4",
+   "id": "64668b72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1986,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1999,7 +2000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
